# imgui-go

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cimgui.go  dummy.go  glfw.go  go.mod  go.sum  imgui.go  imgui_constants.go  imgui_functions.go  imgui_typedefs.go  imgui_widgets.go  imgui_wrappers.c  imgui_wrappers.h  impl_glfw.go  impl_opengl3.go  main.go  thirdparty_cimgui.cpp  thirdparty_glfw.c  thirdparty_imgui.cpp  thirdparty_imgui_backends.cpp
.github/workflows/: c_libraries.yml  example.yaml  imgui-go.yml  libraries.yml  testing.yaml
backends/glfw/: imgui.h  impl_glfw.go
backends/opengl3/: impl_opengl3.go
example/: example.go  testing.go
generate/: generate.go  generate_linux.go  generate_windows.go
generator/: generator.go
generator/cparser/: prototype.go
generator2/: generator.go
glfw/: callbacks.c  constants.go  glfw.go
imgui/: constants.go  imgui.go  imgui_functions.go  imgui_typedefs.go  imgui_wrappers.c  impl_glfw.go  impl_opengl3.go  stringpool.go
